// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Card > Composição > snapshot: card completo 1`] = `
<div>
  <div
    class="relative overflow-hidden rounded-xl border backdrop-blur-[10px] transition-all duration-300 bg-zinc-800-alpha-80 border-zinc-400-alpha-10 p-6 before:content-[""] before:absolute before:top-0 before:left-0 before:right-0 before:h-0.5 before:bg-gradient-accent-top before:opacity-60 before:transition-all before:duration-300"
  >
    <div
      class="flex items-center gap-3 text-text-zinc-200 mb-4"
    >
      Título do Card
    </div>
    <div
      class="text-text-zinc-200"
    >
      Este é o conteúdo principal do card.
    </div>
    <div
      class="mt-4 pt-4 border-t border-zinc-400-alpha-10"
    >
      Ações do card
    </div>
  </div>
</div>
`;

exports[`Card > Renderização básica > snapshot: card básico 1`] = `
<div>
  <div
    class="relative overflow-hidden rounded-xl border backdrop-blur-[10px] transition-all duration-300 bg-zinc-800-alpha-80 border-zinc-400-alpha-10 p-6 before:content-[""] before:absolute before:top-0 before:left-0 before:right-0 before:h-0.5 before:bg-gradient-accent-top before:opacity-60 before:transition-all before:duration-300"
  >
    Card simples
  </div>
</div>
`;

exports[`Card > Variantes > snapshot: variante default 1`] = `
<div>
  <div
    class="relative overflow-hidden rounded-xl border backdrop-blur-[10px] transition-all duration-300 bg-zinc-800-alpha-80 border-zinc-400-alpha-10 p-6 before:content-[""] before:absolute before:top-0 before:left-0 before:right-0 before:h-0.5 before:bg-gradient-accent-top before:opacity-60 before:transition-all before:duration-300"
  >
    Default Card
  </div>
</div>
`;

exports[`Card > Variantes > snapshot: variante ghost 1`] = `
<div>
  <div
    class="relative overflow-hidden rounded-xl border backdrop-blur-[10px] transition-all duration-300"
  >
    Ghost Card
  </div>
</div>
`;

exports[`Card > Variantes > snapshot: variante outline 1`] = `
<div>
  <div
    class="relative overflow-hidden rounded-xl border backdrop-blur-[10px] transition-all duration-300"
  >
    Outline Card
  </div>
</div>
`;

exports[`CardHeader > snapshot: header isolado 1`] = `
<div>
  <div
    class="relative overflow-hidden rounded-xl border backdrop-blur-[10px] transition-all duration-300 bg-zinc-800-alpha-80 border-zinc-400-alpha-10 p-6 before:content-[""] before:absolute before:top-0 before:left-0 before:right-0 before:h-0.5 before:bg-gradient-accent-top before:opacity-60 before:transition-all before:duration-300"
  >
    <div
      class="flex items-center gap-3 text-text-zinc-200 mb-4"
    >
      Card Header
    </div>
  </div>
</div>
`;
